Fix for scrollbars

--- a/menu-about.css
+++ b/menu-about.css
@@ -42,7 +42,10 @@
     /* scrollbar-width: thin; */
 	scrollbar-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0);
 
-    mask-image: linear-gradient(rgba(0, 0, 0, 0) 0px, black var(--frame-margin), black calc(100% - var(--frame-margin)), rgba(0, 0, 0, 0) 100%);
+    /* -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 0) 0px, black var(--frame-margin), black calc(100% - var(--frame-margin)), rgba(0, 0, 0, 0) 100%); */
+}
+.about-text-container::-webkit-scrollbar {
+    display: none;
 }
 .about-text
 {
